--- a/app/views/rails_admin/main/_file_upload.html.haml
+++ b/app/views/rails_admin/main/_file_upload.html.haml
@@ -1,3 +1,3 @@
-%div{:class => "field #{field.dom_id}"}
+.field{:class => field.dom_id}
   = form.label field.method_name, field.label
-  = form.file_field field.method_name, :class => "#{field.css_class} #{field.has_errors? ? "errorField" : nil}"
+  = form.file_field field.method_name, :class => [field.css_class, (field.has_errors? && "errorField")]
