Tidied up some more haml partials.

--- a/app/views/rails_admin/main/_form_field.html.haml
+++ b/app/views/rails_admin/main/_form_field.html.haml
@@ -1,6 +1,8 @@
-%div{:class => "field #{field.dom_id}"}
+.field{:class => field.dom_id}
   = form.label field.method_name, field.label
   = form.send field.view_helper, field.name, field.html_attributes
+
   - if field.has_errors?
     %span.errorMessage= "#{field.label } #{field.errors.first}"
+
   %p.help= field.help
