--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -1,9 +1,12 @@
-%div{:class => "field #{field.dom_id}"}
+.field{:class => field.dom_id}
   = form.label field.method_name, field.label
   = form.send field.view_helper, field.method_name, field.html_attributes
+
   - if field.has_errors?
     %span.errorMessage= "#{field.label} #{field.errors.first}"
+
   %p.help= field.help
+
   - if field.ckeditor
     - head_javascript "ckeditor/ckeditor.js"
     - head_javascript do
