--- a/app/views/rails_admin/main/_form_field.html.haml
+++ b/app/views/rails_admin/main/_form_field.html.haml
@@ -2,7 +2,4 @@
   = form.label field.method_name, field.label
   = form.send field.view_helper, field.name, field.html_attributes
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label } #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
