--- a/app/views/rails_admin/main/_dragonfly_file.html.haml
+++ b/app/views/rails_admin/main/_dragonfly_file.html.haml
@@ -10,6 +10,5 @@
           = link_to field.bindings[:object].send(field.name).url, field.bindings[:object].send(field.name).url
     .row
       = form.file_field(field.name, field.html_attributes)
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label} #{field.errors.first}"
-  %p.help= field.help
+
+  = messages_and_help_for field
