--- a/app/views/rails_admin/main/_form_datetime.html.haml
+++ b/app/views/rails_admin/main/_form_datetime.html.haml
@@ -2,10 +2,7 @@
   = form.label field.method_name, field.label
   = form.send field.view_helper, field.method_name, field.html_attributes
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label} #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
 
   - head_style "rails_admin/jquery.ui.timepicker.css"
   - head_javascript "rails_admin/jquery.ui.timepicker.js"
