--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -16,10 +16,7 @@
   %input{:name => field.dom_name, :type => "hidden", :value => ""}
   = form.select field.method_name, collection, { :selected => selected_ids, :object => @object }, field.html_attributes
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label} #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
 
   - head_style 'rails_admin/ra.filtering-multiselect.css'
   - head_javascript "rails_admin/ra.filtering-multiselect.js"
