--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -36,7 +36,4 @@
 
       = form.label(field.delete_method, I18n.t('admin.actions.delete'))
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label} #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
