--- a/app/views/rails_admin/main/_form_polymorphic_association.html.haml
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.haml
@@ -19,10 +19,7 @@
     :class => (field.has_errors? && "errorField"), :id => column_type_dom_id                   |
   = form.select field.method_name, collection, {:include_blank => true, :selected => selected.try(:id)}, :class => (field.has_errors? && "errorField"), :style => "margin-left:10px;"
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label } #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
 
   - head_style 'rails_admin/ra.filtering-select.css'
   - head_javascript "rails_admin/ra.filtering-select.js"
