--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -2,10 +2,7 @@
   = form.label field.method_name, field.label
   = form.send field.view_helper, field.method_name, field.html_attributes
 
-  - if field.has_errors?
-    %span.errorMessage= "#{field.label} #{field.errors.first}"
-
-  %p.help= field.help
+  = messages_and_help_for field
 
   - if field.ckeditor
     - head_javascript "ckeditor/ckeditor.js"
