--- a/app/views/rails_admin/main/_form_colorpicker.html.haml
+++ b/app/views/rails_admin/main/_form_colorpicker.html.haml
@@ -3,7 +3,7 @@
   = form.send field.view_helper, field.name, field.html_attributes
 
   .colorSelector{:id => "#{field.dom_id}Helper"}
-    %div-# This div gets coloured.
+    %div
 
   = messages_and_help_for field
 
