--- a/app/views/rails_admin/main/_form_polymorphic_association.html.haml
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.haml
@@ -15,8 +15,7 @@
 
 .field{:class => field.dom_id}
   = form.label field.method_name, field.label
-  = form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, |
-    :class => (field.has_errors? && "errorField"), :id => column_type_dom_id                   |
+  = form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :class => (field.has_errors? && "errorField"), :id => column_type_dom_id                        
   = form.select field.method_name, collection, {:include_blank => true, :selected => selected.try(:id)}, :class => (field.has_errors? && "errorField"), :style => "margin-left:10px;"
 
   = messages_and_help_for field
