--- a/app/views/rails_admin/main/_form_polymorphic_association.html.haml
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.haml
@@ -20,29 +20,29 @@
 
   = messages_and_help_for field
 
-  - head_style 'rails_admin/ra.filtering-select.css'
-  - head_javascript "rails_admin/ra.filtering-select.js"
-  :javascript
-    $j(document).ready(function($) {
-      var urls = <%= field.polymorphic_type_urls.to_json.html_safe %>;
-      $("#<%= column_type_dom_id %>").bind("change", function(e){
-        if ("" == $(this).val()) {
-          $("#<%= field.dom_id %>").html('<option value=""></option>');
-        } else {
-          $.ajax({
-            url: urls[$(this).val()],
-            data: { compact: true, all: true },
-            beforeSend: function(xhr) {
-              xhr.setRequestHeader("Accept", "application/json");
-            },
-            success: function(data, status, xhr) {
-              var html = '<option></option>';
-              $(data).each(function(i, el) {
-                html += '<option value="' + el.id + '">' + el.label + '</option>';
-              });
-              $("#<%= field.dom_id %>").html(html);
-            }
-          });
-        }
-      });
+- head_style 'rails_admin/ra.filtering-select.css'
+- head_javascript "rails_admin/ra.filtering-select.js"
+- head_javascript do
+  $j(document).ready(function($) {
+    var urls = <%= field.polymorphic_type_urls.to_json.html_safe %>;
+    $("#<%= column_type_dom_id %>").bind("change", function(e){
+      if ("" == $(this).val()) {
+        $("#<%= field.dom_id %>").html('<option value=""></option>');
+      } else {
+        $.ajax({
+          url: urls[$(this).val()],
+          data: { compact: true, all: true },
+          beforeSend: function(xhr) {
+            xhr.setRequestHeader("Accept", "application/json");
+          },
+          success: function(data, status, xhr) {
+            var html = '<option></option>';
+            $(data).each(function(i, el) {
+              html += '<option value="' + el.id + '">' + el.label + '</option>';
+            });
+            $("#<%= field.dom_id %>").html(html);
+          }
+        });
+      }
     });
+  });
