Created the field_wrapper_for block helper to clean up the haml partials some more.

--- a/app/views/rails_admin/main/_file_upload.html.haml
+++ b/app/views/rails_admin/main/_file_upload.html.haml
@@ -1,3 +1,2 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field, :messages_and_help => false) do
   = form.file_field field.method_name, :class => [field.css_class, (field.has_errors? && "errorField")]
