--- a/app/views/rails_admin/main/_dragonfly_file.html.haml
+++ b/app/views/rails_admin/main/_dragonfly_file.html.haml
@@ -1,5 +1,4 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   .input
     - if field.bindings[:object].send(field.name)
       .row
@@ -10,5 +9,3 @@
           = link_to field.bindings[:object].send(field.name).url, field.bindings[:object].send(field.name).url
     .row
       = form.file_field(field.name, field.html_attributes)
-
-  = messages_and_help_for field
