--- a/app/views/rails_admin/main/_form_colorpicker.html.haml
+++ b/app/views/rails_admin/main/_form_colorpicker.html.haml
@@ -1,11 +1,8 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   = form.send field.view_helper, field.name, field.html_attributes
 
   .colorSelector{:id => "#{field.dom_id}Helper"}
     %div
-
-  = messages_and_help_for field
 
 - head_style "rails_admin/jquery.colorpicker.css"
 - head_javascript "rails_admin/jquery.colorpicker.js"
