--- a/app/views/rails_admin/main/_form_datetime.html.haml
+++ b/app/views/rails_admin/main/_form_datetime.html.haml
@@ -1,8 +1,5 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   = form.send field.view_helper, field.method_name, field.html_attributes
-
-  = messages_and_help_for field
 
 - head_style "rails_admin/jquery.ui.timepicker.css"
 - head_javascript "rails_admin/jquery.ui.timepicker.js"
