--- a/app/views/rails_admin/main/_form_enumeration.html.haml
+++ b/app/views/rails_admin/main/_form_enumeration.html.haml
@@ -1,5 +1,2 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   = form.select field.method_name, field.enum, {:include_blank => true}, field.html_attributes.merge({ :class => "enum" })
-
-  = messages_and_help_for field
