--- a/app/views/rails_admin/main/_form_field.html.haml
+++ b/app/views/rails_admin/main/_form_field.html.haml
@@ -1,5 +1,2 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   = form.send field.view_helper, field.name, field.html_attributes
-
-  = messages_and_help_for field
