--- a/app/views/rails_admin/main/_form_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_form_paperclip_file.html.haml
@@ -7,8 +7,7 @@
     thumb_url = object.send(field.method_name).url(field.thumb_method) if file_is_image && field.thumb_method
   end
 
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   .input
     .toggle{:style => ('display:none;' if file_present && field.delete_method && object.send(field.delete_method) == '1')}
       - if file_present
@@ -35,5 +34,3 @@
         }}, :class => "ra-button")                                     |
 
       = form.label(field.delete_method, I18n.t('admin.actions.delete'))
-
-  = messages_and_help_for field
