--- a/app/views/rails_admin/main/_form_text.html.haml
+++ b/app/views/rails_admin/main/_form_text.html.haml
@@ -1,8 +1,5 @@
-.field{:class => field.dom_id}
-  = form.label field.method_name, field.label
+= field_wrapper_for(form, field) do
   = form.send field.view_helper, field.method_name, field.html_attributes
-
-  = messages_and_help_for field
 
 - if field.ckeditor
   - head_javascript "ckeditor/ckeditor.js"
