--- a/app/views/rails_admin/main/_show_paperclip_file.html.haml
+++ b/app/views/rails_admin/main/_show_paperclip_file.html.haml
@@ -3,4 +3,4 @@
   - if (url = field.value).present?
     %img{:src => url, :alt => url}
   - else
-    = t('admin.details.no_file_found')
+    = t('admin.show.no_file_found')
