--- a/app/views/rails_admin/main/edit.html.haml
+++ b/app/views/rails_admin/main/edit.html.haml
@@ -16,7 +16,7 @@
     %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
-      = send(@model_config.update.form_builder, @object, :url => rails_admin_update_path(@abstract_model, @object), :html => { :method => "put", :multipart => true, :class => "form" }) do |form|
+      = send(@model_config.update.form_builder, @object, :url => rails_admin_update_path(@abstract_model, @object.id), :html => { :method => "put", :multipart => true, :class => "form" }) do |form|
         - @model_config.edit.with(:object => @object).visible_groups.each do |fieldset|
           = render :partial => 'form_fieldset', :locals => { :fieldset => fieldset, :form => form, :object => @object }
         = render :partial => 'submit_buttons'
