--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -3,7 +3,8 @@
   params = request.params.except(:authenticity_token, :action, :controller, :model_name, :utf8, :bulk_export)
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
-  properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
+  # pass self as :view to visible_fields
+  properties = @model_config.list.visible_fields(:view => self).map{|property| property.with(:view => self)}
   # columns paginate
   @filterable_fields = @model_config.list.fields.select(&:filterable?)
   @style, @other, properties = get_column_set(properties)
