--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -129,11 +129,11 @@
                 - other_right = rails_admin_list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i + 1))
                 %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
                 %td.last
-                  = action_icon(rails_admin_show_path(@abstract_model, object), :show, "Show")
+                  = action_icon(rails_admin_show_path(@abstract_model, object.id), :show, "Show")
                   - if can_edit
                     = action_icon(edit_path, :edit, t("admin.list.edit_action"))
                   - if authorized? :delete, @abstract_model, object
-                    = action_icon(rails_admin_delete_path(@abstract_model, object), :cross, t("admin.list.delete_action"))
+                    = action_icon(rails_admin_delete_path(@abstract_model, object.id), :cross, t("admin.list.delete_action"))
 
         .pagination
           - if @page_count.to_i > 1
