Make the footer customizable

--- a/app/views/layouts/rails_admin/main.html.haml
+++ b/app/views/layouts/rails_admin/main.html.haml
@@ -9,6 +9,6 @@
       #main
         #content= yield
         #footer
-          %p Rails Admin | 2011
+          %p #{RailsAdmin::Config.footer || "Rails Admin | 2011"}
       = render :partial => "layouts/rails_admin/sidebar"
 
