--- a/app/views/rails_admin/main/_show_association.html.haml
+++ b/app/views/rails_admin/main/_show_association.html.haml
@@ -1,4 +1,3 @@
-- display_name = field.association[:pretty_name]
 - model_name   = field.association[:name]
 - associations = [field.bindings[:object].send(model_name)].flatten.compact
 
@@ -6,4 +5,4 @@
 %div.value
   %ul
     - associations.each do |association|
-      %li= link_to "#{display_name.singularize} ##{association.id}", rails_admin_show_path(:model_name => display_name.downcase, :id => association.id)
+      %li= link_to field.formatted_value, rails_admin_show_path(:model_name => model_name, :id => association.id)
