--- a/app/views/layouts/rails_admin/_header.html.haml
+++ b/app/views/layouts/rails_admin/_header.html.haml
@@ -10,5 +10,5 @@
       - if (current_user rescue nil)
         %li= link_to header_icon(:account, current_user.email), (rails_admin_edit_path(:user, current_user) rescue '#')
       - if (current_user rescue nil)
-        %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (destroy_session_path(current_user) rescue '#')
+        %li= link_to header_icon(:logout, t("admin.credentials.log_out")), (destroy_session_path(current_user) rescue '#'), :method => :delete
 
