--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -6,4 +6,4 @@
     - if authorized? :new, @abstract_model
       %button.button{:type => "submit", :name => "_add_another"}= t("admin.new.save_and_add_another")
     %button.button{:type => "submit", :name => "_add_edit"}= t("admin.new.save_and_edit")
-    %button.button{:type => "submit", :name => "_continue"} Cancel
+    %button.button{:type => "submit", :name => "_continue"}= t("admin.new.cancel")
