--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -58,30 +58,31 @@
   = breadcrumbs_for :list, @abstract_model
 
   .content
-    .control
-      %span(style="margin: 3px 6px")
-        %select#filter_select.small-uniform
-          %option{:value => ""}= t('admin.list.add_filter')+"..."
-          - @filterable_fields.each do |field|
-            - field_options = case field.type
-            - when :enum
-              - CGI.escapeHTML options_for_select(field.with(:object => @abstract_model.model.new).enum).gsub("\n", '')
-            - else
-              - ''
-            %option{"data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
+    .content-header
+      .control
+        %span(style="margin: 3px 6px")
+          %select#filter_select.small-uniform
+            %option{:value => ""}= t('admin.list.add_filter')+"..."
+            - @filterable_fields.each do |field|
+              - field_options = case field.type
+              - when :enum
+                - CGI.escapeHTML options_for_select(field.with(:object => @abstract_model.model.new).enum).gsub("\n", '')
+              - else
+                - ''
+              %option{"data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
 
-      - if authorized? :new, @abstract_model
-        = action_button rails_admin_new_path, t("admin.list.add_new"), :add
+        - if authorized? :new, @abstract_model
+          = action_button rails_admin_new_path, t("admin.list.add_new"), :add
 
-      - if authorized? :delete, @abstract_model
-        = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;"
+        - if authorized? :delete, @abstract_model
+          = action_button '#', t("admin.list.delete_selected"), :cross, :onclick => "$j('#bulk_action').val('delete'); $j('#bulk_form').submit(); return false;"
 
-      = form_tag(rails_admin_list_post_path(params.merge(:model_name => @abstract_model.to_param).except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
-        %span.search
-          %input#search.search_box{:name => "query", :type => "text", :value => query, :placeholder => "#{t("admin.list.search")}"}
-          %input.search_submit{:type => "submit", :value => ""}
-        #filters_box
-    %h2.title= @page_name
+        = form_tag(rails_admin_list_post_path(params.merge(:model_name => @abstract_model.to_param).except(*%w[page filters query])), :method => :post, :remote => true, :class => "form", :style => "display:inline") do
+          %span.search
+            %input#search.search_box{:name => "query", :type => "text", :value => query, :placeholder => "#{t("admin.list.search")}"}
+            %input.search_submit{:type => "submit", :value => ""}
+          #filters_box
+      %h2.title= @page_name
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       = form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
