Refactoring of the show view functionality. Removed show partials (overkill) in favor of a DSL friendly "pretty_value" now in use in the list view too. closes #586, closes #583, references #557

--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -25,4 +25,5 @@
             = content_tag :div, fieldset.help, :class => "help" if fieldset.help
             - fields.map { |field| field.with(:object => @object, :view => self) }.each do |field|
               %div.field{:class => "#{field.abstract_model.to_param.singularize}_#{field.name}"}
-                = field.render
+                %div.label= field.label
+                %div.value= field.pretty_value.presence || ' - '
