Forgotten replacement for 'dropdown' deprecation

--- a/app/views/rails_admin/main/_navigation.html.haml
+++ b/app/views/rails_admin/main/_navigation.html.haml
@@ -14,7 +14,7 @@
       - if children.size == 1
         = link_to(model.label.pluralize, rails_admin_list_path(:model_name => model.abstract_model.to_param))
       - else
-        %a{:href => "#"}= model.dropdown ? t(model.dropdown, :default => model.dropdown) : model.label.pluralize
+        %a{:href => "#"}= model.navigation_label ? t(model.navigation_label, :default => model.navigation_label) : model.label.pluralize
         %ul
           - children.each_with_index do |child, index|
             %li{:class => ("active" if @page_type == tab_titles[index])}
