--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -25,5 +25,6 @@
             = content_tag :div, fieldset.help, :class => "help" if fieldset.help
             - fields.map { |field| field.with(:object => @object, :view => self) }.each do |field|
               %div.field{:class => "#{field.abstract_model.to_param.singularize}_#{field.name}"}
-                %div.label= field.label
-                %div.value= field.pretty_value.presence || ' - '
+                - if (value = field.pretty_value.presence) || !RailsAdmin::config.compact_show_view
+                  %div.label= field.label
+                  %div.value= value || ' - '
