--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -45,14 +45,15 @@
     width: #{value[:width]}px;
     }
 
-:javascript
-  $j(document).ready(function($) {
-    $(this).one("ajax:success", function(e, data, status, xhr) {
-      $("#content").html(data);
-    });
+- head_javascript do
+  :plain
+    $j(document).ready(function($) {
+      $(this).one("ajax:success", function(e, data, status, xhr) {
+        $("#content").html(data);
+      });
 
-    #{@ordered_filter_string}
-  });
+      #{@ordered_filter_string}
+    });
 
 #block-tables.block
   = breadcrumbs_for :list, @abstract_model
