--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -88,8 +88,10 @@
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       = form_tag rails_admin_bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
         = hidden_field_tag :bulk_action
-        - can_export = authorized?(:export, @abstract_model)
-        - can_bulk_action = can_export || authorized?(:delete, @abstract_model)
+        - can_export      = authorized? :export,      @abstract_model
+        - can_delete      = authorized? :delete,      @abstract_model
+        - can_see_history = authorized? :see_history, @abstract_model
+        - can_bulk_action = can_export || can_delete_global
         %table.table.grid
           %thead
             %tr
@@ -114,15 +116,17 @@
 
           %tbody
             - @objects.each do |object|
-              - can_edit  = authorized?(:edit, @abstract_model, object)
-              - edit_path = rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id) if can_edit
-              - show_path = rails_admin_show_path(:model_name => @abstract_model.to_param, :id => object.id)
+              - can_show   = authorized? :show,   @abstract_model, object
+              - can_edit   = authorized? :edit,   @abstract_model, object
+              - can_delete = authorized? :delete, @abstract_model, object
+              - edit_path   = rails_admin_edit_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_edit
+              - show_path   = rails_admin_show_path(  :model_name => @abstract_model.to_param, :id => object.id) if can_show
+              - delete_path = rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id) if can_delete
               - row_class = "#{cycle("odd", "even")}#{" link" if can_edit}"
 
-              %tr{:class => row_class, :"data-link" => show_path}
-
-                %td.action.select
-                  - if can_bulk_action
+              %tr{:class => row_class, :"data-link" => (can_show ? show_path : nil)}
+                - if can_bulk_action
+                  %td.action.select
                     = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
                 - other_left = rails_admin_list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i - 1))
                 %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => true
@@ -131,11 +135,9 @@
                 - other_right = rails_admin_list_path(params.except("set").merge(:model_name => @abstract_model.to_param, :set => params[:set].to_i + 1))
                 %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
                 %td.last
-                  = action_icon(rails_admin_show_path(@abstract_model, object.id), :show, t("admin.list.show_action"))
-                  - if can_edit
-                    = action_icon(edit_path, :edit, t("admin.list.edit_action"))
-                  - if authorized? :delete, @abstract_model, object
-                    = action_icon(rails_admin_delete_path(@abstract_model, object.id), :cross, t("admin.list.delete_action"))
+                  = action_icon(show_path,   :show,  t("admin.list.show_action"))   if can_show
+                  = action_icon(edit_path,   :edit,  t("admin.list.edit_action"))   if can_edit
+                  = action_icon(delete_path, :cross, t("admin.list.delete_action")) if can_delete
 
         .pagination
           - if @page_count.to_i > 1
@@ -151,7 +153,7 @@
             - if can_export
               = action_button rails_admin_export_path(params.except("page")), t("admin.list.export_action"), nil, :method => :post
               = action_button '#', t("admin.list.export_selected"), nil, :onclick => "$j('#bulk_action').val('export'); $j('#bulk_form').submit(); return false;"
-
-            = action_button rails_admin_history_model_path, t("admin.history.name")
+            - if can_see_history
+              = action_button rails_admin_history_model_path, t("admin.history.name")
       .wat-cf
 
