makes :show page a first class citizen in the navigation menu

--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -1,4 +1,5 @@
 - head_style "rails_admin/show.css"
+- head_javascript "rails_admin/application.js"
 
 #block-tables.block
   = breadcrumbs_for :show, @object
