--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -51,7 +51,7 @@
             $j(document).ready(function($) {
               var cache = {}; 
               $("#timeline").timeline({
-                url: "#{ rails_admin_history_slider_path }",
+                url: "#{ history_slider_path }",
                 monthChanged: function(month, year) {
                   if (cache[year] && cache[year][month]) {
                     $("#listingHistory").html(cache[year][month]);
