--- a/app/views/layouts/rails_admin/_footer.html.haml
+++ b/app/views/layouts/rails_admin/_footer.html.haml
@@ -1,11 +1,9 @@
-= javascript_fallback "//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
-= javascript_fallback "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js", "/javascripts/rails_admin/jquery-ui-1.8.14.min.js", "!jQuery.ui"
+-# FIXME: the asset pipeline combined javascript (without jquery included) loads before the google CDN jquery,
+-# so we end up with a jQuery undefined error. For now, I added jquery to the asset pipeline, but it's not ideal
+-# as it might load jQuery twice (if the main application or another engine already loads it)
+-#= javascript_fallback "//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js", "/assets/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'"
+-#= javascript_fallback "//ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js", "/assets/javascripts/rails_admin/jquery-ui-1.8.14.min.js", "!jQuery.ui"
 
-- scripts = %w[jquery.localscroll.js jquery.scrollTo.js jquery.tipsy.js jquery.uniform.min.js ]
-= javascript_include_tag *scripts.map{ |s| "rails_admin/activo/#{s}" }
-
-- head_javascript "rails_admin/activo/application.js"
-
-= javascript_include_tag "rails_admin/rails.js"
+= javascript_include_tag "rails_admin/rails_admin.js"
 
 = head_javascript
