--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -12,10 +12,8 @@
   = form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field.html_attributes
 
   - if authorized? :new, config.abstract_model
-    = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, rails_admin_new_path(:model_name => config.abstract_model.to_param), :class => "createAssociatedRecord"
+    = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, new_path(:model_name => config.abstract_model.to_param), :class => "createAssociatedRecord"
 
-- head_style 'rails_admin/ra.filtering-select.css'
-- head_javascript "rails_admin/ra.filtering-select.js"
 - head_javascript do
   $j(document).ready(function($){
   $(".#{"#{field.dom_id}"} .createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
@@ -24,6 +22,6 @@
     createQuery: function(query) {
     return { query: query }
     },
-    source: "#{rails_admin_list_path(config.abstract_model.to_param, :compact => true)}"
+    source: "#{list_path(config.abstract_model.to_param, :compact => true)}"
   });
   });
